// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add Prettier 1`] = `
Object {
  "/.prettierrc": "{
  \\"useTabs\\": true,
  \\"overrides\\": [
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 70,
        \\"useTabs\\": false,
        \\"trailingComma\\": \\"none\\",
        \\"arrowParens\\": \\"avoid\\",
        \\"proseWrap\\": \\"never\\"
      }
    },
    {
      \\"files\\": \\"*.{json,babelrc,eslintrc,remarkrc}\\",
      \\"options\\": {
        \\"useTabs\\": false
      }
    }
  ]
}",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"test\\": \\"jest\\",
    \\"posttest\\": \\"npm run format\\",
    \\"format\\": \\"prettier --loglevel warn --write \\\\\\"**/*.{js,css,md}\\\\\\"\\"
  }
}",
}
`;

exports[`should extend a custom pattern defined in a package.json script 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"format\\": \\"prettier --loglevel warn --write \\\\\\"**/*.{xxx,yyy,js,css,md}\\\\\\"\\",
    \\"test\\": \\"jest\\",
    \\"posttest\\": \\"npm run format\\"
  }
}"
`;

exports[`should infer options from EditorConfig 1`] = `
"{
  \\"overrides\\": [
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 70,
        \\"useTabs\\": false,
        \\"trailingComma\\": \\"none\\",
        \\"arrowParens\\": \\"avoid\\",
        \\"proseWrap\\": \\"never\\"
      }
    },
    {
      \\"files\\": \\"*.{json,babelrc,eslintrc,remarkrc}\\",
      \\"options\\": {
        \\"useTabs\\": false
      }
    }
  ]
}"
`;

exports[`should replace existing overrides for the same pattern 1`] = `
"{
  \\"useTabs\\": true,
  \\"overrides\\": [
    {
      \\"files\\": \\"*.js\\",
      \\"options\\": {
        \\"useTabs\\": false
      }
    },
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 42
      }
    }
  ]
}"
`;

exports[`should use a custom indent 1`] = `
"{
  \\"useTabs\\": true,
  \\"overrides\\": [
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 70,
        \\"useTabs\\": false,
        \\"trailingComma\\": \\"none\\",
        \\"arrowParens\\": \\"avoid\\",
        \\"proseWrap\\": \\"never\\"
      }
    },
    {
      \\"files\\": \\"*.{json,babelrc,eslintrc,remarkrc}\\",
      \\"options\\": {
        \\"useTabs\\": false
      }
    }
  ]
}"
`;

exports[`should use a custom options 1`] = `
"{
  \\"printWidth\\": 333,
  \\"overrides\\": [
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 70,
        \\"useTabs\\": false,
        \\"trailingComma\\": \\"none\\",
        \\"arrowParens\\": \\"avoid\\",
        \\"proseWrap\\": \\"never\\"
      }
    },
    {
      \\"files\\": \\"*.{json,babelrc,eslintrc,remarkrc}\\",
      \\"options\\": {
        \\"useTabs\\": false
      }
    }
  ]
}"
`;

exports[`should use a custom pattern 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"test\\": \\"jest\\",
    \\"posttest\\": \\"npm run format\\",
    \\"format\\": \\"prettier --loglevel warn --write \\\\\\"**/*.{xxx,yyy}\\\\\\"\\"
  }
}"
`;

exports[`should use custom overrides 1`] = `
"{
  \\"useTabs\\": true,
  \\"overrides\\": [
    {
      \\"files\\": \\"*.css\\",
      \\"options\\": {
        \\"printWidth\\": 42
      }
    }
  ]
}"
`;
